--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+/target
+.DS_Store
+.classpath
+org.eclipse.m2e.core.prefs
